# python-project-lvl2

./: .gitignore  Makefile  README.md  pyproject.toml  setup.cfg
.github/workflows/: pyci.yml
gendiff/: __init__.py  agrparser.py  argparser.py  build_diff.py  builder_diff.py  cli.py  converter_to_initial_format.py  diff_builder.py  diff_generator.py  difference.py  engine.py  file_loader.py  file_reader.py  get_diff.py  io.py  load_file.py  rendering.py  upload_file.py  value_converter.py
gendiff/formatters/: json.py  json_like_view.py  json_view.py  mapping.py  plain.py  plain_view.py  stylish.py
gendiff/scripts/: __init__.py  gendiff.py
tests/: test_difference.py  test_exception.py  test_exceptions.py  test_formatters.py  test_generate_diff.py
tests/fixtures/: after.json  after.yml  before.json  before.yml  compare_JSON.txt  compare_JSON_plain.txt  compare_YAML.txt  compare_YAML_plain.txt  compare_file1_and_file2.txt  diff.py  file1.json  file2.json
tests/fixtures/comparisons/: compare_JSON_json.txt  compare_YAML_json.txt  compare_json.txt  compare_tree_YAML_json.txt  compare_tree_json.txt  json.json  json.txt  tree_json.txt
